# pixel-people-optimizer

./: .gitignore  README.md  fly.staging.toml  fly.toml
backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0505fca554d7_add_created_at_field.py  0c4444c27700_special_missions.py  1eb43b76aaec_add_user_auth_and_user_saved_buildings_.py  8bbc48ab5173_backfill_user_data.py  90599b057497_remove_unique_constraint_for_saved_.py  b31816bac136_backfill_special_missions_table.py
backend/pixel_people_optimizer/: __init__.py  add_building.py  add_profession.py  api.py  auth.py  constants.py  db.py  depends.py  main.py  models.py  pyproject.toml  recommend.py  schema.py  scrape.py  service.py
backend/pixel_people_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/pixel_people_optimizer/auth/: api.py  auth.py  service.py
backend/pixel_people_optimizer/buildings/: api.py  models.py  queries.py  schema.py  service.py
backend/pixel_people_optimizer/formulas/: graph.py  models.py  schema.py
backend/pixel_people_optimizer/lib/: schema.py  sync_user_items.py
backend/pixel_people_optimizer/missions/: api.py  models.py  queries.py  schema.py
backend/pixel_people_optimizer/professions/: api.py  models.py  queries.py  schema.py  service.py
backend/pixel_people_optimizer/recommendations/: api.py  schema.py  service.py
backend/pixel_people_optimizer/scripts/: generate_graph_json.py
backend/pixel_people_optimizer/users/: api.py  models.py  schema.py
(+86 files in other folders)
