[project]
name = "pixel_people_optimizer"
version = "0.1.0"
description = "Backend for Pixel People Optimizer"
authors = [{name = "Nicole Nguyen"}]
dependencies = []

[tool.setuptools]
packages = ["pixel_people_optimizer"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
